[metadata]
name = wgit
version = 0.0.2
author = Marcello De Giorgi
author_email = degiorgimarcello@gmail.com
description = A simple git wrapper to execute pre-commands and extensions
long_description = file: README.md
license_files = LICENSE.txt

[options]
packages = find:

install_requires=
        pyyaml

[options.entry_points]
console_scripts =
    wgit = wgit.main:run

